# cortex-practice

./: README.md  another-predictor.py  cortex.yaml  predictor.py  pyproject.toml  requirements.txt  sample-sentiment.json  sample-summarizer.json  trainer.py
