[tool.poetry]
name = "cortex-practice"
version = "0.1.0"
description = ""
authors = ["kishimoto-banana <drehbleistift@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.23.1"
boto3 = "^1.14.12"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
